add info to package.json

--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
       "not dead",
       "not op_mini all"
     ],
+    "homepage": "/",
+    "author": "",
+    "license": "ISC",
+    "description": "",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
