--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^1.10.3",
     "history": "^4.10.1",
     "immer": "^6.0.3",
+    "jwt-decode": "^2.2.0",
     "polished": "^3.4.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
