--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "history": "^4.10.1",
     "immer": "^6.0.3",
     "jwt-decode": "^2.2.0",
+    "lottie-web": "^5.7.0",
     "polished": "^3.4.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
